# python-template

./: .gitignore  CHANGELOG.md  pyproject.toml  readme.md
.github/workflows/: python-checks.yml  release.yml
src/: main.py
tests/: test_main.py
