[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Poetry project with Poe integration"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
flake8 = "^6.0.0"
poethepoet = "^0.20.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"


[tool.poe]
poetry_command = ""

[tool.poe.tasks]
test = "pytest tests/ -v"
format = "black ."
format_check = "black . --check"
lint = "flake8 ."
ci_check = ["format_check", "lint", "test"]
commit = "cz commit"
version = "cz bump"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
